--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,27 @@
+# dependencies
 node_modules
+
+# environment files
+.env
+.env.local
+.env.*.local
+.env.development
+.env.production
+
+# build output
+dist
+build
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
