--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "scripts": {
     "dev": "vite",
     "start": "vite",
-    "build": "tsc --noEmit false --emitDeclarationOnly false && vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
     "server": "cd server && npm run dev",
