--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,10 +15,11 @@
     "jsx": "react-jsx",
 
     /* Linting */
-    "strict": true,
+    "strict": false,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noFallthroughCasesInSwitch": true,
+    "noFallthroughCasesInSwitch": false,
+    "skipLibCheck": true,
 
     /* Import Meta */
     "types": ["vite/client", "node"],
