EMERGENCY: Force Vercel sync - deploying wrong commit c99e14b, should be latest with fixes

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,12 @@
   "outputDirectory": "dist",
   "framework": "vite",
   "installCommand": "npm install",
+  "git": {
+    "deploymentEnabled": {
+      "main": true
+    }
+  },
+  "functions": {},
   "routes": [
     {
       "src": "/assets/(.*)",
